--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "src/js/main.js",
-  "source": "src/index.html",
+  "main": "./dist/main.js",
+  "source": "src/index.js",
+  "homepage": "https://github.com/AleksandrChernuk/test.git",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build src/index.html",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -17,10 +20,10 @@
   "bugs": {
     "url": "https://github.com/AleksandrChernuk/test/issues"
   },
-  "homepage": "https://github.com/AleksandrChernuk/test#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
     "buffer": "^6.0.3",
+    "gh-pages": "^6.0.0",
     "parcel": "^2.9.3"
   },
   "dependencies": {
